build/gleam-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gleam-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/app-root: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /auth_v1
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 8080
      - path: /user_v1
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 8080
      - path: /group_v1
        pathType: Prefix
        backend:
          service:
            name: group-service
            port:
              number: 8080
